# Data-Monk-Internship-Data

./: .gitignore  README.md
data_eng/: The Case of the Slowdown: A SQLite Mystery.ipynb  asqlitemystery.ipynb  config.yaml  data_pipeline_weather.ipynb  demo.json  flyte-package.tgz  pythonIntroduction.ipynb
data_eng/Analytics And Reporting Intro/: Assignment_Output.md  Part_ONE.ipynb  analytic_and_reporting.ipynb
data_eng/ClickHouseDB/: Assignment.md  clickhouse_exercise.ipynb  exercise2commands.txt  insert_loop.py  query_loop.py
data_eng/Dagester_tutorial/: assignment.md
data_eng/Dagester_tutorial/Weather_project/: .env  pyproject.toml
data_eng/Dagester_tutorial/Weather_project/src/dagster_quickstart/: assets.py  definitions.py  jobs.py  schedules.py
data_eng/Dagester_tutorial/Weather_project/src/dagster_quickstart/utils/: tables.py
data_eng/Dagester_tutorial/Weather_project/src/weather_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_eng/Data Visualization/: dataviz.ipynb
data_eng/End to End Weather Project/: app.py  create_tables.py  creatingctiydatascript.py  daily_weather.py  global_weather.py  hourly_weather.py  main.py  moving_mouse.py  press_shift.py  project_file.ipynb
data_eng/LakeHousePolarsDelta/: LakeHousePolarsDelta.ipynb
data_eng/Polars_ETL/: etl_polars_processing.ipynb
data_eng/PostgreSQL/: ProjectPostgres.md  commands.txt  scale_speed.ipynb
data_eng/Storage DuckDB/: assignment_task.ipynb  storageduckdb.ipynb
data_eng/weather_flyte_project/: .env  Assignment_output.md  requirements.txt  (+1 more)
(+33 files in other folders)
