[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_project"
version = "0.1.0"
description = "Weather data pipeline using Dagster"
authors = [
    { name = "Pankaj Kanyal", email = "demo@gmail.com" }
]
dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    "requests"
]

[tool.setuptools]
# tell setuptools where the source code lives
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
